# llm-market-sim

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  main.py  pyproject.toml
examples/: quickstart_zi.py
experiments/: exp00_zi_validation.py
llm_market_sim/: __init__.py  _engine_adapter.py  agents.py  config.py  delegation.py  governance.py  markets.py  metrics.py  populations.py  strategies.py  studies.py  traces.py
src/agents/: __init__.py  base.py  cot_agent.py  llm_client.py  prompts.py  react_agent.py  registry.py  response_parser.py  zi_agent.py
src/analysis/: icc.py  metrics.py  plotting.py  statistics.py  view_results.py
src/data/: __init__.py  exporter.py  schemas.py
src/market/: clearing.py  environment.py  mechanism.py
src/simulation/: __init__.py  config.py  parallel.py  runner.py  valuations.py
src/utils/: prompts.py
tests/: test_agents.py  test_gs_validation.py  test_market.py  test_metrics.py  test_simulation.py  test_valuations.py
