[project]
name = "llm-market-sim"
version = "0.1.0"
description = "LLM agent market simulation for studying emergent price dynamics"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.75.0",
    "google-generativeai>=0.8.0",
    "langgraph>=0.6.11",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
